--- a/lvgl/lvgl.yaml
+++ b/lvgl/lvgl.yaml
@@ -1,6 +1,12 @@
 # Copyright 2025 Vinicius Fortuna
 # SPDX-License-Identifier: Apache-2.0
 
+packages:
+  # These must be in reverse order, as they get prepended to the pages list.
+  wifi: !include page_wifi.yaml
+  qr: !include page_qr.yaml
+  air: !include page_air.yaml
+  badge: !include page_badge.yaml
 
 font:
   - file: "gfonts://Material+Symbols+Rounded"
@@ -87,12 +93,6 @@ lvgl:
         outline_opa: 0%
         outline_pad: 0
 
-    # Style the background layer.
-    # bg_color: 0xDDDDDD
-    # bg_opa: 100%
-    # bg_grad_color: 0x333333
-    # bg_grad_dir: VER
-
     # Style for the root screen.
     height: 100%
     width: 100%
@@ -102,38 +102,6 @@ lvgl:
         - !include ./page_selector.yaml
 
     pages:
-      - !include ./page_badge.yaml
-      - !include ./page_air.yaml
-      - !include ./page_qr.yaml
-      - id: page_wifi
-        on_boot:
-            - lambda: |-
-                lv_group_t* group = lv_group_create();
-                ESP_LOGD("lvgl", "Initializing page_wifi: %p, group: %p", id(page_wifi).obj, group);
-                lv_obj_set_user_data(id(page_wifi).obj, group);
-                recursive_set_group(id(page_wifi).obj, group);
-        layout:
-          type: FLEX
-          flex_flow: COLUMN
-        pad_all: 8
-        widgets:
-          - switch:
-              id: wifi_switch
-          - label:
-              id: wifi_state_label
-          - textarea:
-              one_line: true
-              placeholder_text: SSID
-          - slider:
-              id: test_slider
-              on_press:
-                lvgl.widget.focus:
-                  id: test_slider
-                  editing: true
-              on_cancel:
-                lvgl.widget.focus:
-                  id: test_slider
-                  editing: false
 
 binary_sensor:
   - id: !extend button_1
