--- a/lvgl/page_badge.yaml
+++ b/lvgl/page_badge.yaml
@@ -1,28 +1,72 @@
 # Copyright 2025 Vinicius Fortuna
 # SPDX-License-Identifier: Apache-2.0
 
-id: page_badge
-on_boot:
-  - lambda: |-
-      lv_group_t* group = lv_group_create();
-      ESP_LOGD("lvgl", "Initializing page_badge: %p, group: %p", id(page_badge).obj, group);
-      lv_obj_set_user_data(id(page_badge).obj, group);
-      recursive_set_group(id(page_badge).obj, group);
-styles: [page, surface]
-layout:
-  type: FLEX
-  flex_flow: COLUMN
-  flex_align_main: CENTER
-  flex_align_cross: CENTER
-text_align: CENTER
-widgets:
-  - label:
-      id: title_label
-      text: !lambda return id(badge_title).state;
-      text_font: montserrat_32
-      width: 100%
-  - label:
-      id: subtitle_label
-      text: !lambda return id(badge_subtitle).state;
-      text_font: montserrat_24
-      width: 100%
+lvgl:
+  - id: !extend badge_lvgl
+    pages:
+      - id: page_badge
+        on_boot:
+          - lambda: |-
+              lv_group_t* group = lv_group_create();
+              ESP_LOGD("lvgl", "Initializing page_badge: %p, group: %p", id(page_badge).obj, group);
+              lv_obj_set_user_data(id(page_badge).obj, group);
+              recursive_set_group(id(page_badge).obj, group);
+        styles: [page, surface]
+        layout:
+          type: FLEX
+          flex_flow: COLUMN
+          flex_align_main: CENTER
+          flex_align_cross: CENTER
+        text_align: CENTER
+        widgets:
+          - label:
+              id: title_label
+              text: !lambda return id(badge_title).state;
+              text_font: montserrat_32
+              width: 100%
+          - label:
+              id: subtitle_label
+              text: !lambda return id(badge_subtitle).state;
+              text_font: montserrat_24
+              width: 100%
+
+text:
+  - id: badge_title
+    name: Title
+    initial_value: Badge Title
+    platform: template
+    icon: mdi:badge-account-horizontal-outline
+    optimistic: true
+    mode: text
+    update_interval: never
+    restore_value: true
+    on_value:
+      - lvgl.label.update:
+          id: title_label
+          text: !lambda return x;
+      - if:
+          condition: {lambda: return x.length() > 0;}
+          then:
+            - lvgl.widget.show: title_label
+          else:
+            - lvgl.widget.hide: title_label
+
+  - id: badge_subtitle
+    name: Subtitle
+    initial_value: Enable Wi-Fi and configure via local network web server
+    platform: template
+    icon: mdi:badge-account-horizontal-outline
+    optimistic: true
+    mode: text
+    update_interval: never
+    restore_value: true
+    on_value:
+      - lvgl.label.update:
+          id: subtitle_label
+          text: !lambda return x;
+      - if:
+          condition: {lambda: return x.length() > 0;}
+          then:
+            - lvgl.widget.show: subtitle_label
+          else:
+            - lvgl.widget.hide: subtitle_label
