--- a/lvgl/lvgl.yaml
+++ b/lvgl/lvgl.yaml
@@ -87,7 +87,7 @@ lvgl:
         radius: 8    
 
       - id: switcher_focused
-        bg_opa: 50%
+        bg_opa: 70%
         bg_color: 0x000000
         outline_width: 0
         outline_opa: 0%
@@ -119,7 +119,7 @@ script:
           ESP_LOGD("lvgl", "selector group: %p", selector_group);
 
           // Focus on the current page in the selector group.
-          ESP_LOGD("lvgl", "current page: %d", id(badge_lvgl).get_current_page());
+          ESP_LOGD("lvgl", "current page: %zu", id(badge_lvgl).get_current_page());
           auto obj_to_focus = get_group_item_by_index(selector_group, id(badge_lvgl).get_current_page());
           lv_group_focus_obj(obj_to_focus);
 
@@ -143,4 +143,3 @@ script:
           lv_group_focus_next(page_group);
           //   auto obj_to_focus = get_group_item_by_index(page_group, 0);
           //   lv_group_focus_obj(obj_to_focus);
-
