--- a/lvgl/page_selector.yaml
+++ b/lvgl/page_selector.yaml
@@ -98,8 +98,27 @@ obj:
                 styles: [switcher_focused]
               widgets:
                 - label:
-                    text: "\U0000e63e"
+                    text: "\U0000f747"
               on_press:
                 - script.execute: dismiss_selector
           - label:
-              text: Wifi
+              text: IR Blast
+      # - obj:
+      #   styles: [switcher_entry]
+      #   layout:
+      #       type: FLEX
+      #       flex_flow: COLUMN
+      #       flex_align_cross: CENTER
+      #   widgets:
+      #     - button:
+      #         scroll_on_focus: true
+      #         styles: [switcher_button]
+      #         focus_key:
+      #           styles: [switcher_focused]
+      #         widgets:
+      #           - label:
+      #               text: "\U0000e63e"
+      #         on_press:
+      #           - script.execute: dismiss_selector
+      #     - label:
+      #         text: Wifi
