--- a/lvgl/lvgl_host.yaml
+++ b/lvgl/lvgl_host.yaml
@@ -61,3 +61,10 @@ script:
     parameters:
       x: float  # Value in ppb
     then: []
+  # Sends the Fake IR blast command.
+  - id: on_ir_blast_click
+    mode: single
+    then:
+      - logger.log:
+          level: DEBUG
+          format: "Fake IR blast command sent with address: 0xD880, command: 0xDD"
