Add mac suffix, factory reset and improv

--- a/demo.yaml
+++ b/demo.yaml
@@ -12,6 +12,7 @@ packages:
 esphome:
   name: ${name}
   friendly_name: HOPE Badge
+  name_add_mac_suffix: true
   on_boot:
     - then:
         logger.log: Hello World
@@ -38,6 +39,9 @@ wifi:
 # To allow for configuring the wifi on a new device.
 captive_portal:
 
+# Go to https://www.improv-wifi.com/ and follow the instructions.
+improv_serial:
+
 # Sets up a local web server for remote control.
 web_server:
   local: true
@@ -51,6 +55,11 @@ web_server:
 ota:
   - platform: esphome
     password: !secret ota_password
+
+button:
+  - platform: factory_reset
+    name: Restore Data to Factory Defaults
+    disabled_by_default: true
 
 binary_sensor:
   - id: !extend button_1
