--- a/.github/workflows/build-demos.yaml
+++ b/.github/workflows/build-demos.yaml
@@ -6,11 +6,12 @@ name: Build Demos
 on:
   push:
     branches: [ main ]
-    paths: &paths
+    paths:
       - '**.yaml'
   pull_request:
     branches: [ main ]
-    paths: *paths
+    paths:
+      - '**.yaml'
 
 jobs:
   compile-demos:
