Add ota_password to CI

--- a/.github/workflows/build-demos.yaml
+++ b/.github/workflows/build-demos.yaml
@@ -35,6 +35,7 @@ jobs:
           PLATFORMIO_BUILD_CACHE_DIR: /tmp/esphome
         shell: bash
         run: |
+          echo "ota_password: example_password" > secrets.yaml
           for config in demo*.yaml; do
             esphome compile "$config" || {
               echo "ERROR: Compilation failed for $config"
