--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -5,11 +5,11 @@ name: Run Tests
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
     paths:
       - '**.yaml'
   pull_request:
-    branches: [ main ]
+    branches: [main]
     paths:
       - '**.yaml'
 
@@ -26,7 +26,11 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: '3.x'
-      
+
+      - name: Lint YAML
+        shell: bash
+        run: yamllint **/*.yaml
+
       - name: Install ESPHome
         run: pip install esphome
 
