--- a/firmware_no_screen/main_dev.yaml
+++ b/firmware_no_screen/main_dev.yaml
@@ -10,7 +10,7 @@ packages:
 # Over-the-Air provisioning.
 ota:
   - platform: esphome
-    password: tCYnLp2DKW0&vWx56L&0Z
+    password: !secret ota_password
 
 binary_sensor:
   # Avoids USB conflict for development.
