--- a/firmware_screen/main_dev.yaml
+++ b/firmware_screen/main_dev.yaml
@@ -10,4 +10,4 @@ packages:
 # Over-the-Air provisioning.
 ota:
   - platform: esphome
-    password: tCYnLp2DKW0&vWx56L&0Z
+    password: !secret ota_password
