--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -38,9 +38,12 @@ jobs:
         env:
           PLATFORMIO_BUILD_CACHE_DIR: /tmp/esphome
         shell: bash
+        # TODO: Need to install SDL on Linux for Host platform:
+        # sudo apt update && sudo apt install -y libsdl2-dev libsodium-dev build-essential
         run: |
-          echo "ota_password: example_password" > secrets.yaml
-          for config in demo*.yaml; do
+          echo "ap_password: example_password" > secrets.yaml
+          echo "ota_password: example_password" >> secrets.yaml
+          for config in firmware_screen/main_dev.yaml firmware_no_screen/main_dev.yaml; do
             esphome compile "$config" || {
               echo "ERROR: Compilation failed for $config"
               exit 1
