--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -9,16 +9,15 @@
     },
     "tasks": [
         {
-            "label": "Deploy demo",
+            "label": "Build Current File",
             "type": "process",
             "command": "esphome",
-            "args": ["run", "demo.yaml"],
+            "args": ["compile", "${file}"],
             "group": {
                 "kind": "build",
                 "isDefault": true
             },
-            "problemMatcher": [],
-        }, 
+        },
         {
             "label": "Lint YAML",
             "type": "shell",
@@ -26,10 +25,34 @@
             "group": "test",
         }, 
         {
-            "label": "Build demo",
+            "label": "Deploy no screen firmware",
             "type": "process",
             "command": "esphome",
-            "args": ["compile", "demo.yaml"],
+            "args": ["run", "firmware_no_screen/main.yaml"],
+            "group": "build",
+            "problemMatcher": [],
+        },
+        {
+            "label": "Build no screen firmware",
+            "type": "process",
+            "command": "esphome",
+            "args": ["compile", "firmware_no_screen/main.yaml"],
+            "group": "test",
+            "problemMatcher": [],
+        },
+        {
+            "label": "Deploy screen firmware",
+            "type": "process",
+            "command": "esphome",
+            "args": ["run", "firmware_screen/main.yaml"],
+            "group": "build",
+            "problemMatcher": [],
+        },
+        {
+            "label": "Build screen firmware",
+            "type": "process",
+            "command": "esphome",
+            "args": ["compile", "firmware_screen/main.yaml"],
             "group": "test",
             "problemMatcher": [],
         }
