--- a/firmware_screen/main.yaml
+++ b/firmware_screen/main.yaml
@@ -1,18 +1,21 @@
 # Copyright 2025 Vinicius Fortuna
 # SPDX-License-Identifier: Apache-2.0
 
-# This is the file where you can customize the behavior of your badge.
+# This is the firmware using LVGL for the badge version with a screen.
 
 substitutions:
   name: hope-badge
 
 packages:
-  hardware: !include './hardware/badge_0.8.13_pro.yaml'
+  hardware: !include '../hardware/badge_0.8.15_pro.yaml'
+  lvgl: !include ./lvgl.yaml
 
 esphome:
   name: ${name}
   friendly_name: HOPE Badge
   name_add_mac_suffix: true
+  includes:
+    - ./menu.h
   on_boot:
     - then:
         logger.log: Hello World
@@ -33,7 +36,7 @@ wifi:
 
   # Configures a local access point, in case no wifi is available.
   ap:
-    password: fortunaatgithub
+    password: !secret ap_password
 
 # To allow for configuring the wifi on a new device.
 captive_portal:
@@ -50,36 +53,10 @@ web_server:
       name: Badge Settings
       sorting_weight: -1
 
-# Over-the-Air provisioning.
-ota:
-  - platform: esphome
-    password: !secret ota_password
-
 button:
   - platform: factory_reset
     name: Restore Data to Factory Defaults
     disabled_by_default: true
-
-binary_sensor:
-  - id: !extend button_1
-    on_click:
-      then:
-        - script.execute: next_color
-
-  - id: !extend button_2
-    on_click:
-      then:
-        - script.execute: dim_down
-
-  - id: !extend button_3
-    on_click:
-      then:
-        - script.execute: dim_up
-
-  - id: !extend button_4
-    on_click:
-      then:
-        - script.execute: ir_blast
 
 remote_receiver:
   - id: !extend ir_receiver
@@ -105,6 +82,11 @@ remote_transmitter:
         - delay: 100ms
         - lambda: id(enable_ir_rx) = true;
 
+sensor:
+  - platform: uptime
+    type: seconds
+    name: Uptime
+
 light:
   - id: !extend led_strip
     effects:
@@ -128,65 +110,6 @@ globals:
     initial_value: 'true'
 
 script:
-  # Make the LEDs dimmer.
-  - id: dim_down
-    mode: queued
-    then:
-      - if:
-          condition:
-            lambda: 'return id(led_strip).remote_values.get_brightness() <= 0.201f;'
-          then:
-            light.turn_off:
-              id: led_strip
-              transition_length: 0s
-          else:
-            light.dim_relative:
-              id: led_strip
-              relative_brightness: -10%
-              transition_length: 0s
-
-  # Make the LEDs brighter.
-  - id: dim_up
-    mode: queued
-    then:
-      - if:
-          condition: {light.is_on: led_strip}
-          then:
-            - light.dim_relative:
-                id: led_strip
-                relative_brightness: 10%
-                transition_length: 0s
-          else:
-            - light.turn_on:
-                id: led_strip
-                brightness: 20%
-                transition_length: 0s
-
-  # Sends the IR blast command.
-  - id: ir_blast
-    mode: single
-    then:
-      - remote_transmitter.transmit_nec:
-          transmitter_id: ir_transmitter
-          address: 0xD880
-          command: 0xDD22
-
-  # Changes the color of the LED strip.
-  - id: next_color
-    mode: single
-    then:
-      - lambda: |-
-          static int color = 0;
-          color = (color + 1) % 8;
-          if (color == 0) {
-            id(led_strip).turn_off().set_transition_length(0).perform();
-            return;
-          }
-          float red = color & 1 ? 1 : 0;
-          float green = color & 2 ? 1 : 0;
-          float blue = color & 4 ? 1 : 0;
-          id(led_strip).turn_on().set_transition_length(0).set_rgb(red, green, blue).perform();
-
   - id: run_blast_effect
     mode: single
     then:
@@ -195,3 +118,23 @@ script:
       - light.turn_off: {id: led_strip, transition_length: 1s}
       - delay: 500ms
       - switch.turn_off: vibration_motor
+
+  # Sends the IR blast command.
+  - id: on_ir_blast_click
+    mode: single
+    then:
+      - remote_transmitter.transmit_nec:
+          transmitter_id: ir_transmitter
+          address: 0xD880
+          command: 0xDD22
+
+text:
+  - id: !extend badge_title
+    web_server:
+      sorting_group_id: sorting_group_badge
+      sorting_weight: 1
+
+  - id: !extend badge_subtitle
+    web_server:
+      sorting_group_id: sorting_group_badge
+      sorting_weight: 2
