Rename firmware directories

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -28,7 +28,7 @@
             "label": "Deploy no screen firmware",
             "type": "process",
             "command": "esphome",
-            "args": ["run", "firmware_no_screen/main.yaml"],
+            "args": ["run", "firmware_nodisplay/main.yaml"],
             "group": "build",
             "problemMatcher": [],
         },
@@ -36,7 +36,7 @@
             "label": "Build no screen firmware",
             "type": "process",
             "command": "esphome",
-            "args": ["compile", "firmware_no_screen/main.yaml"],
+            "args": ["compile", "firmware_nodisplay/main.yaml"],
             "group": "test",
             "problemMatcher": [],
         },
@@ -44,7 +44,7 @@
             "label": "Deploy screen firmware",
             "type": "process",
             "command": "esphome",
-            "args": ["run", "firmware_screen/main.yaml"],
+            "args": ["run", "firmware_display/main.yaml"],
             "group": "build",
             "problemMatcher": [],
         },
@@ -52,7 +52,7 @@
             "label": "Build screen firmware",
             "type": "process",
             "command": "esphome",
-            "args": ["compile", "firmware_screen/main.yaml"],
+            "args": ["compile", "firmware_display/main.yaml"],
             "group": "test",
             "problemMatcher": [],
         }
