--- a/hardware/badge_0.8.13_pro.yaml
+++ b/hardware/badge_0.8.13_pro.yaml
@@ -33,12 +33,14 @@ sensor:
   - platform: max17043  # U4
     id: battery_sensor
     i2c_id: badge_i2c
+    address: 0x36
     battery_voltage: {name: Battery Voltage}
     battery_level: {name: Battery Level}
 
   - platform: sgp30  # U7
     id: air_sensor
     i2c_id: badge_i2c
+    address: 0x58
     # See https://esphome.io/components/sensor/sgp30.html#calibrating-baseline.
     # These are values I've observed in my badge after running it for 17 hours.
     baseline:
