--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -7,6 +7,10 @@ on:
   push:
     branches: [main]
     paths:
+      # Move path check to job. Use GITHUB_OUTPUT and dynamic matrix:
+      # https://docs.github.com/en/actions/writing-workflows/choosing-what-your-workflow-does/workflow-commands-for-github-actions#setting-an-output-parameter
+      # https://github.blog/changelog/2020-04-15-github-actions-new-workflow-features/#new-fromjson-method-in-expressions
+      # https://stackoverflow.com/questions/65056670/is-it-possible-to-have-a-dynamic-strategy-matrix-in-a-workflow-in-github-actions
       - '**.yaml'
   pull_request:
     branches: [main]
@@ -17,6 +21,8 @@ jobs:
   compile-demos:
     name: Compile Demos
     runs-on: ubuntu-latest
+    # TODO:
+    # if: ...there are changes...
 
     steps:
       - name: Checkout repository
@@ -29,6 +35,7 @@ jobs:
 
       - name: Lint YAML
         shell: bash
+        # For development, you can use `pipx run yamllint **/*.yaml`.
         run: yamllint **/*.yaml
 
       - name: Install ESPHome
@@ -41,7 +48,9 @@ jobs:
         # TODO: Need to install SDL on Linux for Host platform:
         # sudo apt update && sudo apt install -y libsdl2-dev libsodium-dev build-essential
         run: |
-          echo "ap_password: example_password" > secrets.yaml
+          echo "wifi_ssid: example_ssid" > secrets.yaml
+          echo "wifi_password: example_password" >> secrets.yaml
+          echo "ap_password: example_password" >> secrets.yaml
           echo "ota_password: example_password" >> secrets.yaml
           for config in firmware_display/main_dev.yaml firmware_nodisplay/main_dev.yaml; do
             esphome compile "$config" || {
