--- a/firmware_nodisplay/main_dev.yaml
+++ b/firmware_nodisplay/main_dev.yaml
@@ -7,7 +7,18 @@
 packages:
   base: !include ./main.yaml
 
-# Over-the-Air provisioning.
+esphome:
+  name: hope-badge-dev
+  friendly_name: HOPE Badge (Dev)
+  name_add_mac_suffix: false
+
+wifi:
+  # Convenience wifi configuration for development.
+  networks:
+    - ssid: !secret wifi_ssid
+      password: !secret wifi_password
+
+# Over-the-Air provisioning, so we don't need to plug the badge to flash it.
 ota:
   - platform: esphome
     password: !secret ota_password
