--- a/hardware/badge_0.8.15.yaml
+++ b/hardware/badge_0.8.15.yaml
@@ -2,4 +2,4 @@
 # SPDX-License-Identifier: Apache-2.0
 
 packages:
-  hardware: !include ./badge_0.8.13_pro.yaml
+  hardware: !include ./badge_0.8.13.yaml
