--- a/hardware/badge_0.8.20.yaml
+++ b/hardware/badge_0.8.20.yaml
@@ -164,3 +164,18 @@ switch:
       ignore_pin_validation_error: true
     restore_mode: ALWAYS_OFF
 
+display:
+  - id: badge_display
+    platform: ili9xxx
+    model: ST7789V
+    dc_pin: GPIO00  # TFT_DC
+    cs_pin: GPIO01  # SPI_CS2
+    invert_colors: true
+    # We need PSRAM to use 16 bit, so we reduce the color bit depth.
+    color_palette: 8BIT
+    dimensions:
+      width: 320
+      height: 240
+    transform:
+      swap_xy: true
+      mirror_y: true
