Improve dev firmware

--- a/firmware_display/main_dev.yaml
+++ b/firmware_display/main_dev.yaml
@@ -7,6 +7,17 @@
 packages:
   base: !include ./main.yaml
 
+esphome:
+  name: hope-badge-dev
+  friendly_name: HOPE Badge (Dev)
+  name_add_mac_suffix: false
+
+wifi:
+  # Convenience wifi configuration for development.
+  networks:
+    - ssid: !secret wifi_ssid
+      password: !secret wifi_password
+
 # Over-the-Air provisioning.
 ota:
   - platform: esphome
